# strata-benchmarks

./: .gitignore  Cargo.toml  README.md
benches/: primitives.rs  redis_compare.rs
benches/ann/: ann.rs  dataset.rs
benches/concurrency/: README.md  concurrency.rs
benches/fill-level/: README.md  fill_level.rs
benches/graph/: graph_bfs.rs  ldbc.rs
benches/harness/: mod.rs  recorder.rs
benches/latency/: README.md  branch.rs  event.rs  json.rs  kv.rs  state.rs  vector.rs
benches/redis-compare/: README.md  redis_compare.rs
benches/ycsb/: workloads.rs  ycsb.rs
data/: branches.json  events.json  json_docs.json  kv.json  state.json  vectors.json
data/graph/example-directed/: example-directed-BFS  example-directed.e  example-directed.properties
docs/: enterprise-support-dataset.md
results/: SCHEMA.md  graph-bfs-report-2026-02-22T17-34-24Z-2fd8417.md
scripts/: download-ldbc.sh
src/: lib.rs
tests/: branch.rs  branch_api.rs  cross_primitive.rs  database.rs  database_builder.rs  dataset_branch.rs  dataset_dirty.rs  dataset_event.rs  dataset_json.rs  dataset_kv.rs  dataset_state.rs  dataset_vector.rs  event.rs  graph_ldbc.rs  json.rs  kv.rs  session.rs  state.rs  vector.rs
tests/common/: mod.rs
