[package]
name = "strata-benchmarks"
version = "0.1.0"
edition = "2021"
description = "Black-box tests and performance benchmarks for StrataDB"
license = "Apache-2.0"

[dependencies]
stratadb = { git = "https://github.com/strata-ai-labs/strata-core.git", branch = "main" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
petgraph = "0.7"
tempfile = "3.8"

[[bench]]
name = "kv"
path = "benches/latency/kv.rs"
harness = false

[[bench]]
name = "state"
path = "benches/latency/state.rs"
harness = false

[[bench]]
name = "event"
path = "benches/latency/event.rs"
harness = false

[[bench]]
name = "json"
path = "benches/latency/json.rs"
harness = false

[[bench]]
name = "vector"
path = "benches/latency/vector.rs"
harness = false

[[bench]]
name = "branch"
path = "benches/latency/branch.rs"
harness = false

[[bench]]
name = "concurrency"
path = "benches/concurrency/concurrency.rs"
harness = false

[[bench]]
name = "redis_compare"
path = "benches/redis-compare/redis_compare.rs"
harness = false

[[bench]]
name = "fill_level"
path = "benches/fill-level/fill_level.rs"
harness = false

[[bench]]
name = "graph_bfs"
path = "benches/graph/graph_bfs.rs"
harness = false

[[bin]]
name = "bench-compare"
path = "src/bin/compare.rs"
